Fixed white space above menus on class page

--- a/styles/assignments.css
+++ b/styles/assignments.css
@@ -1,7 +1,7 @@
 #assignments {
     position: absolute;
     width:50%;
-    top: 30%;
+    top: 10%;
     left: 40%;
     margin: -50px 0 0 -50px;
 }
