--- a/styles/attendance_and_gradebook.css
+++ b/styles/attendance_and_gradebook.css
@@ -1,8 +1,7 @@
 #att_grades {
     position: absolute;
-    top: 24%;
     left: 40%;
-    margin: -50px 0 0 -50px;
+    margin: 0 0 0 -50px;
     width: 50%;
 }
 
