--- a/styles/class_agenda_notes.css
+++ b/styles/class_agenda_notes.css
@@ -4,7 +4,6 @@
 
 #agendaNotes {
     position: absolute;
-    top: 40%;
     left: 40%;
     margin: -50px 0 0 -50px;
     width: 50%;
