--- a/styles/class_information.css
+++ b/styles/class_information.css
@@ -1,6 +1,6 @@
 #mainContent {
     position: absolute;
-    top: 30%;
+    top: 10%;
     left: 40%;
     margin: -50px 0 0 -50px;
     width: 50%;
